--- a/sayi-tahmin-oyunu/index.html
+++ b/sayi-tahmin-oyunu/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
   <meta charset="UTF-8">
@@ -9,16 +9,14 @@
 </head>
 
 <body>
-  <p>1 ile 20 arasındaki sayıyı tahmin edin.</p>
+  <p id="aciklama"></p>
 
   <form>
-    <input id="tahmin" type="number">
-    <input id="tahminEt" type="button" value="Tahmin Et">
+    <input id="tahmin" type="number" autofocus>
+    <button id="tahminEt" type="submit">Tahmin Et</button>
   </form>
 
-  <ul id="tahminler">
-
-  </ul>
+  <ul id="tahminler"></ul>
 
 </body>
 </html>
